# temp.js

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  final.md
.cargo/: config.toml
.claude/skills/beater-test-gates/: SKILL.md
.claude/skills/docs-contracts/: SKILL.md
.claude/skills/docs-contracts/agents/: openai.yaml
.claude/skills/review-pr/: SKILL.md
.claude/skills/systems-engineering/: SKILL.md
.claude/skills/systems-engineering/agents/: openai.yaml
.github/workflows/: ci.yml
crates/beater-agent/: Cargo.toml  build.rs
crates/beater-agent/src/: anthropic.rs  cpp_bridge.rs  cpp_tools.cc  cpp_tools.h  journal.rs  lib.rs  llm.rs  registry.rs  runner.rs  trace_export.rs
crates/beater-cli/src/: main.rs
crates/beater-cli/tests/: dev_smoke.rs
crates/beater-connect/: ARCHITECTURE.md  Cargo.toml  README.md
crates/beater-connect/src/: lib.rs  main.rs
crates/beater-py/src/: lib.rs
crates/beater-runtime/: Cargo.toml
crates/beater-runtime/src/: agent_config.rs  beater_agent.js  bootstrap.js  config.rs  crawl.rs  lib.rs  loader.rs  mcp.rs  router.rs  server.rs  worker.rs
docs/: integrations.md  observability.md  runtime-limits.md  security.md  tools.md  triage.md
examples/hello/: beater.toml
examples/hello/agents/support/: agent.ts
examples/hello/agents/support/tools/: fib.wat  slow_summarize.py  slow_summarize_once.py
examples/hello/app/client/: counter.ts
examples/hello/app/routes/: index.client.ts  index.server.tsx  index.tsx
examples/hello/app/routes/api/: boom.ts  chunks.ts  health.ts
examples/hello/app/routes/api/actions/: contact.ts
scripts/: beater-dashboard-trace-gate.cjs  client-hydration-gate.cjs  client-hydration-gate.sh  docker-cold-start-gate.sh  gate-dev-server.cjs  isolate-pool-scaling-gate.cjs  llm-live-provider-smoke.cjs  llm-provider-conformance-gate.cjs  m2-live-gate-self-test.sh  m2-live-gate.sh  m2-mock-gate.cjs  npm-compat-gate.sh  otlp-trace-gate.cjs  playwright-browser-gate.cjs  remote-mcp-provider-gate.cjs  rsc-flight-gate.cjs  streaming-ssr-gate.sh  vendor.sh
