[workspace]
resolver = "2"
members = [
  "crates/beater-cli",
  "crates/beater-runtime",
  "crates/beater-agent",
  "crates/beater-py",
  "crates/beater-connect",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/jadenfix/beater.js"
rust-version = "1.94"

[workspace.dependencies]
# JS engine (pin exact — deno_core moves fast; bump deliberately)
deno_core = "=0.406.0"
deno_ast = { version = "0.53", features = ["transpiling"] }
deno_error = "0.7"

# async + http
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "sync", "time"] }
tokio-stream = "0.1"
axum = "0.8"
bytes = "1"
futures-util = "0.3"
base64 = "0.22"

# embedded CPython
pyo3 = { version = "0.29", features = ["auto-initialize"] }

# durability journal
rusqlite = { version = "0.40", features = ["bundled"] }

# LLM API client
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# cli + config + fs
clap = { version = "4", features = ["derive"] }
toml = "0.9"
notify = "8"
walkdir = "2"

# serde + errors + logging
chrono = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4"] }

# workspace crates
beater-runtime = { path = "crates/beater-runtime" }
beater-agent = { path = "crates/beater-agent" }
beater-py = { path = "crates/beater-py" }
beater-connect = { path = "crates/beater-connect" }
beatbox-client = { git = "https://github.com/jadenfix/beatbox", rev = "dc2ddd9d93542737627210a05eeae96e008a1aad" }

# V8 and swc are unusable at opt-level 0; keep our own crates fast to compile
[profile.dev.package."*"]
opt-level = 1
