[package]
name = "beater-agent"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
base64.workspace = true
beater-browser.workspace = true
beater-browser-playwright.workspace = true
beatbox-client.workspace = true
wasmtime.workspace = true
beater-py.workspace = true
anyhow.workspace = true
chrono.workspace = true
cxx.workspace = true
futures-util.workspace = true
reqwest.workspace = true
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true

[build-dependencies]
cxx-build.workspace = true
