[package]
name = "beater-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
beater-agent.workspace = true
beater-py.workspace = true
anyhow.workspace = true
chrono.workspace = true
axum.workspace = true
bytes.workspace = true
futures-util.workspace = true
deno_core.workspace = true
deno_ast.workspace = true
deno_error.workspace = true
notify.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
toml.workspace = true
tracing.workspace = true
walkdir.workspace = true
